--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -30,9 +30,7 @@ jobs:
         run: npm ci
 
       - name: Build and export
-        run: |
-          npx next build
-          npx next export
+        run: npx next build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
